<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:padding="16dp"
    tools:context="com.monsh.resistance.AddAResistance">

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ringColor"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ringColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ringColor"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/spinner2"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/spinner2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/spinner2"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/resultat_text"
        style="@style/TextViewLarge"
        android:layout_below="@id/spinner5"
        android:layout_marginTop="10dp"
        android:text="@string/givingResultText" />

    <TextView
        android:id="@+id/unity"
        style="@style/BarOhmsLarge"
        android:layout_alignEnd="@+id/spinner1"
        android:layout_alignTop="@+id/total"
        android:text="@string/resUnity" />

    <Button
        android:id="@+id/home"
        style="@style/ButtonLarge"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="callHome"
        android:text="@string/homeButtonText" />

    <TextView
        android:id="@+id/main_text_view"
        style="@style/TextViewsLarge"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/titleAddRes" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/main_text_view" />

    <TextView
        android:id="@+id/ringColor"
        style="@style/TextViewLarge"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nomber_rings_text"
        android:paddingTop="15dp"
        android:text="@string/ringColor" />

    <TextView
        android:id="@+id/nomber_rings_text"
        style="@style/TextViewLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_text_view"
        android:paddingTop="25dp"
        android:text="@string/ringsNbr" />

    <TextView
        android:id="@+id/total"
        style="@style/BarOhmsLarge"
        android:layout_below="@+id/resultat_text"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="22dp"
        android:layout_toStartOf="@+id/signe" />

    <TextView
        android:id="@+id/signe"
        style="@style/BarOhmsLarge"
        android:layout_alignBaseline="@+id/tolerance"
        android:layout_alignBottom="@+id/tolerance"
        android:layout_toStartOf="@+id/tolerance"
        android:text="@string/plusMinusText" />

    <TextView
        android:id="@+id/tolerance"
        style="@style/BarOhmsLarge"
        android:layout_alignBaseline="@+id/unity"
        android:layout_alignBottom="@+id/unity"
        android:layout_toStartOf="@+id/unity" />

</RelativeLayout>
